at video 02.1-01:53 edit index.jade to add vender libs files

--- a/validations/views/index.jade
+++ b/validations/views/index.jade
@@ -1,5 +1,5 @@
-extends layout
+#main
 
-block content
-  h1= title
-  p Welcome to #{title}
+script(src="jquery-2.1.1.js")
+script(src="underscore.js")
+script(src="backbone.js")
